# 2048-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain
.github/workflows/: native.yml  quickstart.yml
benches/: board.rs  solver.rs
src/: board.rs  error.rs  evaluators.rs  game.rs  lib.rs  main.rs  solver.rs  strategy.rs  utils.rs
