[package]
name = "play-2048"
version = "1.0.0"
authors = ["Adrien Ball <adrienball3@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust implementation of the famous 2048 game in the terminal"
readme = "README.md"
homepage = "https://github.com/adrienball/2048-rs"
repository = "https://github.com/adrienball/2048-rs"
keywords = ["game", "2048", "puzzle"]
categories = ["games", "command-line-utilities"]
edition = "2018"

[badges]
travis-ci = { repository = "adrienball/2048-rs", branch = "master" }

[dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"
fnv = "1.0.6"
clap = "2.33.0"
log = "0.4.8"
termion = "1.5.5"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "solver"
harness = false

[[bench]]
name = "board"
harness = false